inicio do rodape

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		</section>
 		<div class="container" id="servicos">
 			<div class="row">
-				<span></span>
+				<span class="heading"></span>
 				<h2 class="heading">Nossos Serviços</h2>
 			</div>
 			<div id="servicos_itens">
@@ -128,7 +128,7 @@
 		</div>
 		<div class="container" id="produtos">
 			<div class="row">
-				<span></span>
+				<span class="heading"></span>
 				<h2 class="heading">Nossos Produtos</h2>
 			</div>
 		</div>
@@ -162,7 +162,7 @@
 		</div>
 		<div class="container" id="blog">
 			<div class="row">
-				<span></span>
+				<span class="heading"></span>
 				<h2 class="heading">Blog</h2>
 			</div>
 		</div>
@@ -197,6 +197,21 @@
 					<img src="imagens/card02.jpg" class="img-responsive"alt="">
 				</div>
 			</div>
+		</div>
+		<div id="rodape">
+			<div class="logo-rodape">
+				<img src="imagens/logorodape.png" class="img-responsive"alt="logo rodape">
+			</div>
+			<div id="contatos">
+				<span class="heading"></span>
+				<h2 class="heading">Contato</h2>
+			</div>
+			<div id="mapa">
+				<span class="heading"></span>
+				<h2 class="heading">Localização</h2>
+				<img src="imagens/puts.jpg" class="img-responsive"alt="">
+			</div>
+
 		</div>
 		<script src="js/jquery.min.js"></script>
 		<script src="js/bootstrap.js"></script>
